build: postgresdb basic config

--- a/egresso/src/main/resources/application.yml
+++ b/egresso/src/main/resources/application.yml
@@ -1,1 +1,19 @@
-spring.application.name=engresso
+
+server:
+  port: 8087
+
+spring:
+  datasource:
+    url:  jdbc:postgresql://localhost:5433/portalegressodb
+    username: postgres
+    password: postgres
+  jpa:
+    hibernate:
+      ddl-auto: none
+      default_schema: egresso
+      jdbc:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        lob.non-contextual-creation: true
+    properties:
+      hibernate:
+        show_sql: true
