--- a/egresso/src/DockerFile
+++ b/egresso/src/DockerFile
@@ -6,13 +6,12 @@
 
 #EXPOSE 8087
 
-## Execute a aplicação
 #ENTRYPOINT ["java", "-jar", "/app/egresso.jar"]
 
 FROM eclipse-temurin:17-jdk-alpine
 
 COPY target/egresso-0.0.1-SNAPSHOT.war egresso.war
 
-ENTRYPOINT ["java", "-jar", "/manintcg_api.war"]
+ENTRYPOINT ["java", "-jar", "/egresso.war"]
 
 EXPOSE 8080
